# mutlass

./: .gitignore  CMakeLists.txt  LICENSE  MUSA.cmake  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md  submit_question.md
cmake/: CTestTestfile.configure.cmake  googletest.cmake  version_extended.h.in
examples/: CMakeLists.txt
examples/00_basic_gemm/: CMakeLists.txt  basic_gemm.mu
examples/01_quyuan_gemm_with_collective_builder/: CMakeLists.txt  collective_builder.mu
examples/common/: gather_tensor.hpp  helper.h
include/mute/: config.hpp  int_tuple.hpp  layout.hpp  layout_composed.hpp  pointer.hpp  pointer_base.hpp  pointer_flagged.hpp  pointer_swizzle.hpp  stride.hpp  swizzle.hpp  swizzle_layout.hpp  tensor.hpp  tensor_predicate.hpp  tile.hpp  underscore.hpp
include/mute/algorithm/: axpby.hpp  clear.hpp  cooperative_copy.hpp  cooperative_gemm.hpp  copy.hpp  fill.hpp  functional.hpp  gemm.hpp  prefer.hpp  tensor_algorithms.hpp  tuple_algorithms.hpp
include/mute/arch/: copy.hpp  mma.hpp  mma_mp22.hpp  util.hpp
include/mute/atom/: copy_atom.hpp  copy_traits.hpp  mma_atom.hpp  mma_traits.hpp  mma_traits_mp22.hpp
include/mute/container/: alignment.hpp  array.hpp  array_aligned.hpp  array_subbyte.hpp  bit_field.hpp  musa_types.hpp  tuple.hpp  type_list.hpp
include/mute/numeric/: arithmetic_tuple.hpp  bfloat.hpp  complex.hpp  float8.hpp  half.hpp  int.hpp  integer_sequence.hpp  integer_subbyte.hpp  integral_constant.hpp  integral_ratio.hpp  math.hpp  numeric_types.hpp  real.hpp  tfloat.hpp  uint128.hpp
include/mute/util/: debug.hpp  print.hpp  type_traits.hpp
include/mutlass/: aligned_buffer.h  array.h  array_planar_complex.h  array_subbyte.h  bfloat16.h  blas3.h  blas3_types.h  complex.h  constants.h  coord.h  core_io.h  device_kernel.h  fast_math.h  float8.h  floating_point_mtrtc.h  functional.h  gemm_coord.h  gemm_coord.hpp  half.h  integer_subbyte.h  kernel_hardware_info.h  kernel_hardware_info.hpp  kernel_launch.h  matrix.h  matrix_coord.h  matrix_shape.h  musa_host_adapter.hpp  mutlass.h  numeric_conversion.h  numeric_size.h  numeric_types.h  pitch_linear_coord.h  predicate_vector.h  quaternion.h  real.h  relatively_equal.h  subbyte_reference.h  tensor_coord.h  tensor_ref.h  tensor_ref_planar_complex.h  (+7 more)
include/mutlass/arch/: arch.h  cache_operation.h  memory.h  mma.h  simd.h
include/mutlass/conv/: conv2d_problem_size.h  conv3d_problem_size.h  convolution.h
include/mutlass/detail/: collective.hpp  dependent_false.hpp  helper_macros.hpp  layout.hpp  mma.hpp
include/mutlass/epilogue/: dispatch_policy.hpp
include/mutlass/epilogue/collective/: collective_builder.hpp  collective_epilogue.hpp  default_epilogue.hpp  detail.hpp  epilogue_tensor_broadcast.hpp  mp22_epilogue_vectorized.hpp
include/mutlass/epilogue/collective/builders/: mp22_builder.inl
include/mutlass/epilogue/fusion/: callbacks.hpp  operations.hpp
include/mutlass/epilogue/thread/: activation.h  linear_combination.h  linear_combination_params.h  scale_type.h
include/mutlass/gemm/: dispatch_policy.hpp  gemm.h  gemm_enumerated_types.h
include/mutlass/gemm/collective/: collective_builder.hpp  collective_mma.hpp  mp22_mma_twostage.hpp
include/mutlass/gemm/collective/builders/: common.inl  mp22_gemm_builder.inl
include/mutlass/gemm/device/: gemm_universal_adapter.h
include/mutlass/gemm/kernel/: gemm_universal.hpp  mp22_gemm.hpp  tile_scheduler.hpp
include/mutlass/gemm/threadblock/: threadblock_swizzle.h
include/mutlass/layout/: layout.h  matrix.h  permute.h  pitch_linear.h  tensor.h  vector.h
include/mutlass/platform/: platform.h
include/mutlass/transform/thread/: transpose.h  unary_op.h
media/docs/: quickstart.md
python/: setup_library.py
python/mutlass_library/: __init__.py  gemm_operation.py  generator.py  library.py  manifest.py
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_unit.cpp
test/unit/common/: filter_architecture.cpp  mma_inst_rr_test.hpp  mutlass_unit_test.h
test/unit/gemm/: CMakeLists.txt
test/unit/gemm/device/: CMakeLists.txt  default_gemm_configuration.hpp  gemm_testbed_3x.hpp  mp22_gemm_f32_f32_f32_simt.mu  mp22_gemm_tensorop.mu  testbed_utils.h
test/unit/mute/: CMakeLists.txt
test/unit/mute/core/: CMakeLists.txt  array_subbyte.cpp  bitfield.cpp  coalesce.cpp  compact_xmajor.cpp  compare.cpp  complement.cpp  composition.cpp  constants.cpp  core_unit.cpp  int_tuple.cpp  inverse_left.cpp  inverse_right.cpp  logical_divide.cpp  logical_product.cpp  math.cpp  mixedbits.cpp  nullspace.cpp  pointer.cpp  reverse.cpp  transform.cpp  tuple.cpp
test/unit/mute/quyuan/: CMakeLists.txt  mp22_mma.mu  vectorization_auto.mu
tools/: CMakeLists.txt
tools/profiler/: CMakeLists.txt
tools/profiler/include/mutlass/profiler/: debug.h  device_allocation.h  device_context.h  enumerated_types.h  gemm_operation_profiler.h  gpu_timer.h  mutlass_profiler.h  operation_profiler.h  options.h  performance_report.h  performance_result.h  problem_space.h
tools/profiler/src/: device_allocation.mu  device_context.mu  enumerated_types.cpp  gemm_operation_profiler.mu  gpu_timer.cpp  main.cpp  mutlass_profiler.mu  operation_profiler.mu  options.mu  performance_report.cpp  performance_result.mu  problem_space.cpp
tools/util/: CMakeLists.txt
tools/util/include/mutlass/util/: GPU_Clock.hpp  command_line.h  debug.h  device_dump.h  device_groupnorm.h  device_layernorm.h  device_memory.h  device_nchw_to_nhwc.h  device_nhwc_padding.h  device_nhwc_pooling.h  device_nhwc_to_nchw.h  device_rmsnorm.h  device_utils.h  distribution.h  exceptions.h  gett_commandline.hpp  helper_cuda.hpp  host_reorder.h  host_tensor.h  host_tensor_planar_complex.h  host_uncompress.h  index_sequence.h  packed_stride.hpp  print_error.hpp  tensor_view_io.h  type_traits.h
tools/util/include/mutlass/util/reference/detail/: inner_product.h  linear_to_coordinate.h
tools/util/include/mutlass/util/reference/device/: convolution.h  gemm.h  gemm_complex.h  gemm_planar_complex.h  gett.hpp  rank_2k_complex.h  tensor_compare.h  tensor_fill.h  (+3 more)
(+27 files in other folders)
